--- a/Bride Zilla/Winietki.resx
+++ b/Bride Zilla/Winietki.resx
@@ -173,50 +173,37 @@
         SUVORK5CYII=
 </value>
   </data>
-  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnChange.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EwAACxMBAJqcGAAACUZJREFUSEuVlwlUzvkax5+3hfaSaEqhXDO6rsuYce65Z4ZxZ8bSuEYlnERpGSmV
-        FhVtentb3rQnWiiRFspStiRRQkhUTIrMMIOLMZMZbkI99/urt9E1x5njd85z/n/9f+/zefbfDxnGapB+
-        lAZN2KJBgQeHkFO6AUmPG9CadE1ySdWmbXVTaG2RvoZzmsks1yRz2YIo7YNzIlWvWUol9y0j6YGlVLnd
-        OlqncuWmCYlOKcO/9s0zHxF3dB65ZA4n38IR5FWqSXapQyisSJ18S3TJfpUWOazRoreCfQD2yNBTCike
-        4z0/SrP+C6mEF6cSBxQSZx4n3lVHXADJPkG8vpjYbhPxv6OIraL1r3tljotZlWs8zK945LuBo6oNyG+L
-        9uw5ISqX/iUjXptPfKqZ+OeHxL2dxPwLcc9PxN2PiLsgvz4gvnOXuLKJOGwPsbWceHao2k3PrToOPuU6
-        fw4OKFclt+z3KGivXtCMIEmvQxaArQA9hQDYfZ/48R3i+7eIb98kvnWD+AbkJt47Oojv3lYYcJV4zS7i
-        uSHETrkaqcszhlJY4VvAFhkaFFyhRktidUItY1Q4sJS4U+HdY6EQir8XAEhbO/G3bcQt14mvfEt86Rrx
-        hRbis/D4LCJzFd+aYFzsUWLbeAnbRKvkRZRokF/pILBWjDoNlamTaZoGSSvUnKcHEEcfBvAZ8fP/EH8H
-        SIfCK+HdNcAaoLwekDNXiGsuEdfhWQfwycvExyGHLxJXN8IY/CatmvirSFEHmnLfvXqvwZPjtGhSnDZN
-        SdKa/EWo0qsgePpCEdabsLwdMOGhADbBu8utatxyYyJfaZvIDdcn8MXrU7i2WZcrGyVcASMONxCXA1xa
-        j+cF4ipEQ3aEeL5cmVdmaVk5uKqTvasqUWSaAUWnGpLjRo1qm83I2w/w9F5/KFsHgMhzI6C18OJy22Tu
-        6XnJPb0v+FXPf7mXmRtufM27UeECuPc8cQmgxWeJ8/G3ojPEexAF7yKEPVjp9nKpsa5bxl+InOWjyS1l
-        +Py5MgnnY1M3KrQFoGbIFUiDyB+K5SKeAtzYNgmo/1/n2udxfk0/sAjAXdCTd5o4p5Y46xTxdhiwCf+2
-        iyNesWNcgE/9TIATDCULY7RKXbcjrCii75CXSwA1QM5BGgG8DG/P4/0QFFc3W/BLeDp4nW6dxXkn+73s
-        gwK0TQFNx99T0esZ+OaLSl+Wonl1deFodYraMXrs/GjJrynH0A4/9nt3DoUiRABPonByYW1UBfGqEmL5
-        iQkAdymQ/Sv/4iwOPECcUEWcCEmCJGDIxFWiUKFXit9K8R6Cp0OCEnttNPqMZDlTbefGEB8BoB0tU4Nq
-        vQAvRWgT8SP7AuJFO/ufltkYJuVGAD9TIPtX3InJPBs9vwJ5dISIpzOmWeBB4mB0yLpDeKLAZKjwZSnw
-        PGdsCLmlGcrs09EaKKJ6kUeARVtsrBzKGeeceU+TP+9v9uSyFi8uanTmitZwfjEI3Ms9XNORyLsanLDP
-        i/dh74EWX7z78Iajw3htGTwFPATgSIDdtiJymUaFZJ+qm+2+DY0P8Gn0p/A4tBwhKdbiR0/bFOrfXKKW
-        +1dvb4/i7c3Vy5HHxvNqtGeoAEM2IPx+Yq7LVetorp/O7hCE5BRyWgdwCgrBER999g/h2z/XKJS8++rs
-        ugOPR7HX3tfgcORZhH5ROF2mBRF6BQEA1SLMhag8bxSJ135i/wPqfLezQaHm3VfXy06WHjNjz0Eeh8Pj
-        9XDSNpwayT5Zf5NXDvFBFFcEZutafPAH3K9MEx7X9VXw0+cP+Vn3I37afR/yAIPjpUJ9f6ifim/P7yv2
-        POLnL3/jJ10/sOyYeZ/HfTmGSFHt3mgpxwTt4+SdburvgomVjAEQhI/CumBRhYclHFs1FhVrwdGVZhxT
-        ac6B5WM4rXYmd7/6TYEVq5d3XrRm/7Ix2Gfetze26n2WV42DLhVeD10CGorikqK4XNEZnpvfy6CNeaNn
-        LopHCOBtGPqsbxMkDBu991FfcQirvSFLcS5HVBj1jcrBa1Ptx7w4DwqxR+xdrXiKfIZDj9AZKHSiPV0z
-        IEkGrhSWaKazNFrthh/yGoFQDIRlQIQRfYZAhBGJ1X/9wwDJqZ/Dq3ABGNgrZOC3wmNftJQcRRsBx5bH
-        SLpsk03ep+Dyv5FXrmHCSljSB1ZY+KYIJR4Ax1f/cWRuq5/FbgAP3i8iFoC29EDUxOg8gq7xxSCyk6uX
-        Lc4YKaEVuePIPsHUYqFU5cU6bIyAZcEosMFKhAiwGJkpNVMVuNcrv8GGXXcr9gIowiu8FB2SDWgLjtYt
-        qCHbaAlbJWvPnrdVl2jM53pkPF2frAI14z0wVQQ4HLkQBfYmXOQ58eQH3PGoktsfHuG2h4e446fjnHV2
-        xu+DQogn0ia6o/Rc/wWiAq3qiIuidfSQsklJmjQ1UZ3I/MthZPypPnnKNFXdtqhccMPMjYSVfc3+BlyE
-        T8xdz1JJXwEJmGepEq87KMGwEHMcUcHfpXivwhF673ucbhDXTGKbWOUHlvXqo/5Zr06fnFUj+sjRgP5u
-        N4Jc4/XIJUdv/CKpUqfIRRSONQEXDR8yqCVEsfiJPoeIORwAEYeB8FJIJkIqjtLHuFA04Zj1wOFiE6XE
-        Vmu1Zv+jSY1m/Ai5BfCy3FG0bPsoWpQ1iqzSTMi7dPQUhyTVey5psBxhF70ngIM9H5AABdAdBRSF9IgD
-        RtxCf8Fd7QTgS7cQfxmi8kp+1Mx6SfBw+rhuCE2/qUbTWwFekmH8u1gnjyT/CgtaWTB67OJQtSqHRHiF
-        gtqAapfiQI9ABESvrxeeAywDLBtn9XlAnuC69BjAelyXNuL7PBy188OGNnvlG32eXjORbAJ1aNqZt4FT
-        DMn30HjyKBhHy1PUle3TNSPso7TurkjCPXkHvIRCOQzIwi1jP3J4GlejFpzhF3CyleCuFYr82mDvV6Ea
-        T+w2q2W4ZKrrehebUMqJD2hhkO6fg93zzcguUYnci03JJ3faGPft5sFLErTrVySpsDPG6zcIoS+uSt4w
-        Zhn+62KbTLwA029BlE6LR4pJou+OqR96lpvS8nQl8txl/K5gZXIrMCa/3GkUWvcZORWbaDjK1D76RjZi
-        qVeGxYal8SNSbKN1Ut0zx8pWxps5uW4w/cQ3y0RfXvIp+e38kNz3GQGs/BawGv0Pq9q+ng322kgAAAAA
-        SUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAZDSURBVEhLtdcNTNR1GAfw597f4Hg9OIQDzuP19ACVpfae
+        ZmppM2uliZVrpa5W5sgic2ovpr1YC7Octaw17XVZamtTUhOOw0AUyQAR5OAQBE7xBfBSf32f47A7dzZF
+        +2+f7f5vv+f/e3+O/I+xWi0Jm42ODx1K7TodNYeEkCcvj7pmzqSW3Fxqsw6zNJvM0w7Gp+aXUMhKB1Qn
+        ZSx0mpKnutLSze0jR9LZCROob/ZscsbEUItGQ3UWC12wWmmUSuWLEuTwD9yBwJ0GA3VNnhxbbcksKCZ1
+        xV4iUQF/QoOSxBGoxu9ycEApqRyHTOb8U1OmRLQlJZFLrb6GwMOHkzstjboQdL9Ss3Q3Uc9+FHrMSqL3
+        eRJiHfwIv8IW+Bxew70ZJFyJ/R9WQtLuSm3IIv7w+vR0upCZeRWBR4+mVqMxbQ9p9v+BQtw3oeCvwQXd
+        0ASVsAeKfHbBbvgW8kl0JJPgd0sU2tIak8kkRoz478Dp6NPejIyb7UTnavEi10S4oRM40C/wM/wAm+AL
+        +BTWwvvwAXzpO7+XxF8oo5So22OxZMei2QMOA0RDjERCc7TaNH7YxUG5gB4oga3wE3wHG4EDroePgAO+
+        DW/AUngJCuAdmN5floMkfUt0uvhZUinlIRYj3KAWOKpUyMolirZmDsq16AAOyP3JTfgVcH9yH6+B1bAS
+        Xocl8DK8AM/C0/AELIS7SdShzAal6shFpZLOI9ZFDvw3nJdJqUGm2MCjVSwA7k9uTu5brvln8DF8CO/C
+        W7AcFsMi4HeegafgcXgUHoT7IQ8yfKNfoVy9F7VG8xN5wsOpKTTEupOk4lwWHqoCDroBBvqP+46b801Y
+        Bq8ABpF4DubDk/AYYGRz84qpMBHugtthHEZ9CGEMSkW92ZzoxMyhrXo9FSvU3zdybbm/eJRy7bj/uDlX
+        AddyoC95wA3UlKfXPOBm5aDTYBIgkLgFeEbkwEiw9Ne6OjpmvRg/nsgRFaXfTRLRl4mb24D77z1YARyM
+        g3PNuNm4IDSbSIV0sMEoGA1jfcZALmQDP4upJYwQReKkhIRdJu9tz8pSUXG04ZF6BPY2FQ8iHp2MA86E
+        WODWGAwZIJj/tUqJRBwwGCbSnkjjGm8z86jkmr4K3JfT5fjKGLwMuighIiHqCvheOISBHiJicY73SBYQ
+        lPF0PWgyraAaVdi2I1iwLk0JHjzD+aEQrFB1Qpw5I8TJk9fm7FkM0ioh5Pj4ywIfhYrQ0G+oSCJ3dMfh
+        4ovAoxXzrv8hFQo5IQZ9uFwBAQe0Q6lWu502E1V44nGRAz/s95BGLYTT6StlEEdtbUDAAW7YGRa2k8ql
+        ml2tEbjIq02k30M6na+EQR4eDwYWBu1AeT5O2BcVtYXKQ6M3HQ3DRR7+/g9pNFgk8tHnyzBvF1+b5cux
+        mi0I2sf1UBkdvZ6qLKkFh3jIXzbs/y9ViFNjtc6n6pyc7ArM4wtBHrrRPFLvNincyclmOpSaSnaZrJFH
+        W7CHbwgD3IYtEgtKiVJ9wJmQQHQiJ4eaEhLmcXoT9KXrxVOVp+mt/XlZY0TEjB6zmagE+ZXdZKLtcnlH
+        x+UvXS9eiHiTwbbZir4tUqga7UYjlUYj9cCO4dWg1Y6zYxT2BCtgMO4B3uUKSZxBU+/AlnhMo8ntVCjo
+        uExG3k0ZORYV4cIOtXoVp6rIEoIXdjW4P3lN4DQJKZInjbNOLJMKZYETSQBnO8yb+rQCJja58SXlGs1G
+        fIjo9S/savGmz1kKJ4afoIyU/n4tCdWv60Oy50EMzngY4YV/4Ytc6Phyvb7wd5y2waVCrwRTxLvpc3JX
+        BpynYf92aUj8hvvV+rCVLdnZ1I18C89fEnDSh0wTI5y6MeDwF2TWLqLOfbjlHXS8wKgBG7pA84k7gJuU
+        E4fNwFnnHGwC2Pi5u8pI6qoMj5jekpxMx/hPAlrTP1bACQduiIujrpQU6sUH1KSkhB8cNmyFXaFo538I
+        h6ENW+gpBO69E+7Db2Qdx9GvvBRyEo9U1lUeG7e0Kz1d256YSHUox4V/Eifk8oBYASccuHHIEOrE/x13
+        ZCTVZGVR39y5dHrSJHWNzfbQ3mTzWocqtKyM5M3ou1NlJOnG76Zi0tkdxqTC2jFjHzhts8ndWBva0bzN
+        qMTh+PgggYn+Adzu+Yb5PZRpAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
