--- a/Bride Zilla/Voucher.resx
+++ b/Bride Zilla/Voucher.resx
@@ -117,4 +117,98 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnEdit.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAACZZJREFUSEvFl3lUVEcWxqt7Ehekka1R9u5+r18D3aImcYlJJJoEjdEJKqgNssq+
+        C7giKhAFQSXBJEYjnnEUdwQ14hLc0CFsCmgmcSMBlyBCMEISM+eMfnOr8UByzsyc5J+ZOud7XG7dur93
+        61UVBQPwf1Hv41dtkP0gZkgxMK2/lolhIvOI92BSiMTEWNFGF6vzFSK1eU5h6hL7YFU9l1OYpkSMlPLE
+        GNFXGyvaGuIMTEqSmDpIbRpvWGRgZvZmz7L3tv8OnqdlQrDA9Ml6vRCuLbLxd+4eahwGx3BbuCc7YMwy
+        gSTCkOIKVZQLlAEq2PqrerTRUpHbQt1I1XwVE0P/KDiZ3nq+xKQIKVcZpIJ1oDW8skVklBlR0pSD6ru7
+        0PjgIOrvF6Pim0L8pS4FS0r+DO+1I+ES5ga7QAHiAmG9GE4vnqb/feABigFsRKphiBjtVmU2R4lRS+2x
+        vWYhHj6to9AfSU9Ij/HTP9vR9Usz7j9uQuvPZ3Dz52JcbM9G/rlZeGeNF4bPN8A1Sl3juXiE1SDzQc+y
+        97Z+sB39xmXN2BA3s8HaeP3fFQHWCNg6hpKWU0hve/RLO+71XMWtri9w7WEFrnSWoeYeAe9sQ2XrFtS2
+        FeNQSyBW1zoiesdUaBaMhSZa+lYxeoiCCZRf7BWl6n0o5ilMsgqyYqp4oX7oPCWS93tTVwvn4YfH7bjb
+        fQXf/FCDrzvP4Muuo7jcsQfV7dtw/rsPcLw5B4dvrsCxW9l4v3YqjJ8xZF22xOKS6dAGj4fDQudL9quG
+        M+UyJVMuVfaDHaMdmUOEAxMjhXVWRmf4bxlD7pucibaea2j5oQ43us7jywfluPLwABp7tqPkxFbsPlKA
+        s50Z+OxOKvZ+FYP91xKQedEDIccYQknvNSqQUDwDqvCXoDNK69Rvqpn6LXU/WAgVmFuMznX4AhEvLnXB
+        zZ/2m6C3uxtx6+FFqvIkmtpL0fRwJxp6NqOk4gMUFuYjZ20mPtqTgqPtwdjXMgdFTT5YfN4CkScZYk/+
+        CWHHGfIanOGTO41WvQYjEg0uHgke/WCVn4qp/DXFdiH22FIdTa77uP2oiYCf42rHYVxq243LXVtxqWcj
+        9hxbh7y8bOQWLMGqtQmIj43Ayk2+KHkwFZtvGJB8mmHhWYaECjmiT8iRdIEh/cQ46GNfhSZC2KUN0vaD
+        3WLcFLaBrk8mveeG5seH0PH4FpoeHEZD+z7UfLcddV0foK5nLXYczkJ2djoyc5OwLDMCycsCEJk0EzN9
+        3kZC9kQUtphhdRPDknNypJIST8sRWs6w5rI9fDdOgdJf/US9QG3eB5YiJT8bfxcsK52J9qcVpm9Z27YD
+        VXc/RvX3eajtycC2g8uRnp6G9KxopKYHITZlNkJj38a8MC/4+I/HCIOIt8IGoPA2Q85X/fC4zxmW1TLE
+        730FLsGjICVKfn1gTbRYoIlSY3tdAm79eARV97ai8u4GWrFZqOxYjE/2pyA1LQGLV4YgMmEugsJnYH7k
+        JMwOGoc33hmJsRNV8JyggIO9NWbEmmP9NYbMehmWXpAj5awc8ecZlp7yxEtJXrS9xII+sHOYUDoqTYuy
+        G8txuXMHTreuwanW5ah8lICi8hjExkQiaakR80N9YAx7E0Hx4zF15ii85q3FZF87eIxVQPCwxAsTrWBv
+        awfjKjNT5RlVciyppKrPkF0pYlL6ZDiGqUv7wPbB6sYJK/Qoa05BXfsnONWSgaPfRONMtz82FFOFIbPh
+        a5wK72ledIrpEJ+rhrunM1w0tghIH4gNVJWr1gai3hpqwRY+ieb4+C7t5Vo5lv+NFtg5htVfuMA7cxIc
+        QoSGfnCQpvHN1a8ip1bC+w0vYO/1uSht9sfp7neRv3ca3nh9Cl7zehmFFa6ohxlmxQ6Fo8qSZAWfGAX5
+        GNaWPw9njQ2sLZUwrhiCT7+jRVUvN1WdUkkvUe2CKVmTMTxI3Q92DFWXTl7hjYwL9oji01LFUNBohZJu
+        O4RmqOCg1CK33ALnCXDyZ4Z3I83gpLY2gWZGKXCKfBeob82x52E+0A7To8yxo5Mh95KcKpUj7SJDdpVg
+        mmqHMFX/VAsxUsHoRC+sPDMC6bQCV1fTqVPP8Gkbw6xUGSLz5aigxKX3Gc7+wjA7xhxONM1OaluTzX1l
+        92U4RzFJHw6CT8IQFN1hyG+QI7tGbsrJc7+Q+Dr9CRU29oGlBZKfU+BoJJdMQD5thaxqmWlQ4RUZPvlS
+        hkPfMxy4I8NRAlc9YfCLM4cjQbm4zX28j8eUdjFspnGFTTKspxxZNfSTciYfnADOkKJ0vv0VBwgWNkbV
+        U7+CKdh8fRhW0FRvoEGbrsrw11aGvbdlOEg60cFM33NuPG0dgnJxm/t4XwnF7GmVYSdV+yG9MAdn0Ozx
+        nH50gFj7q54KYYJFH9g91p0JEeIuKfwV5FS+jI20D/MuyUyDi27IsPtbqvquDKeo8kaCzCOYvcrWJG5z
+        H+8rpRgey8d8RGPzLxP8a/r258aB59bGSrsMaQYT0/TwWOTB9Is9NFZ0ffHJmY6dra7IaaS3poq3Xf8t
+        +ApB/KIVsLFXmsRt7uN9PKaYg2kMf+m1DQw7bztg1rppVK0GdCXS6JJ0/WBxgWiSW5Ruw7D5I5G4azp2
+        t1lg/RWGrV/T1DX3TvVxms4GgswKt4CljdIkbnPfcVrFPIbH8jH5NLa4zRxpB2bAMfBF6IKlDZq5GqaZ
+        o+kH0+2RucW5MfdkN+aapG50CBiDVUemo6RzKDbRVBVdZ9jTIkPZPaqaFs++q3LsqHrOJG5zH+/jMTyW
+        jznQYYGs8hlw9h8Hp1TXJm2myITlgkl9YJmTjDEnupY4MKbwNB/qEiXccg4ei0X7pqOsXYs9tK223ST4
+        t70L6MI/eivn4rZpUVFfEY+h2CMdApYceAdOdJa7Ron3FOPNrZmB8j9TH/jX7bnBzzHPVIOlKlqosjF6
+        4t2cKdhU/QqOdbri+CM5DrVTNXQqHbzXK25zH+/jMTx2Vt5UKI0j4RyhqnZfpLMbYD7gWfbe9m/BA+0G
+        MkOSgenppqCNFHKt5mmgDpuAOQXeWHlsIrY2jMa+ZgmH7riaxO0t5ON9cylGQ7GWc9XQxWjz3eJ0TJuk
+        ZYMdBz/L3tv+M5ju1e4x7kwbomUjkgweQrRYRMm6eRWGuImYuPwN07nLxW09+ZTGURzYo4kSimiMp0cU
+        /QcSQ3fzZOkPgmlvS2ES43ckfZyeL0AbXYLOVxMprXMI0ZTYBWrqhpG4LZBPipN8tfGijXucO9Mn6plH
+        9O8A/+8F9i+sEigExiw0cwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnAdd.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAACUZJREFUSEuVlwlUzvkax5+3hfaSaEqhXDO6rsuYce65Z4ZxZ8bSuEYlnERpGSmV
+        FhVtentb3rQnWiiRFspStiRRQkhUTIrMMIOLMZMZbkI99/urt9E1x5njd85z/n/9f+/zefbfDxnGapB+
+        lAZN2KJBgQeHkFO6AUmPG9CadE1ySdWmbXVTaG2RvoZzmsks1yRz2YIo7YNzIlWvWUol9y0j6YGlVLnd
+        OlqncuWmCYlOKcO/9s0zHxF3dB65ZA4n38IR5FWqSXapQyisSJ18S3TJfpUWOazRoreCfQD2yNBTCike
+        4z0/SrP+C6mEF6cSBxQSZx4n3lVHXADJPkG8vpjYbhPxv6OIraL1r3tljotZlWs8zK945LuBo6oNyG+L
+        9uw5ISqX/iUjXptPfKqZ+OeHxL2dxPwLcc9PxN2PiLsgvz4gvnOXuLKJOGwPsbWceHao2k3PrToOPuU6
+        fw4OKFclt+z3KGivXtCMIEmvQxaArQA9hQDYfZ/48R3i+7eIb98kvnWD+AbkJt47Oojv3lYYcJV4zS7i
+        uSHETrkaqcszhlJY4VvAFhkaFFyhRktidUItY1Q4sJS4U+HdY6EQir8XAEhbO/G3bcQt14mvfEt86Rrx
+        hRbis/D4LCJzFd+aYFzsUWLbeAnbRKvkRZRokF/pILBWjDoNlamTaZoGSSvUnKcHEEcfBvAZ8fP/EH8H
+        SIfCK+HdNcAaoLwekDNXiGsuEdfhWQfwycvExyGHLxJXN8IY/CatmvirSFEHmnLfvXqvwZPjtGhSnDZN
+        SdKa/EWo0qsgePpCEdabsLwdMOGhADbBu8utatxyYyJfaZvIDdcn8MXrU7i2WZcrGyVcASMONxCXA1xa
+        j+cF4ipEQ3aEeL5cmVdmaVk5uKqTvasqUWSaAUWnGpLjRo1qm83I2w/w9F5/KFsHgMhzI6C18OJy22Tu
+        6XnJPb0v+FXPf7mXmRtufM27UeECuPc8cQmgxWeJ8/G3ojPEexAF7yKEPVjp9nKpsa5bxl+InOWjyS1l
+        +Py5MgnnY1M3KrQFoGbIFUiDyB+K5SKeAtzYNgmo/1/n2udxfk0/sAjAXdCTd5o4p5Y46xTxdhiwCf+2
+        iyNesWNcgE/9TIATDCULY7RKXbcjrCii75CXSwA1QM5BGgG8DG/P4/0QFFc3W/BLeDp4nW6dxXkn+73s
+        gwK0TQFNx99T0esZ+OaLSl+Wonl1deFodYraMXrs/GjJrynH0A4/9nt3DoUiRABPonByYW1UBfGqEmL5
+        iQkAdymQ/Sv/4iwOPECcUEWcCEmCJGDIxFWiUKFXit9K8R6Cp0OCEnttNPqMZDlTbefGEB8BoB0tU4Nq
+        vQAvRWgT8SP7AuJFO/ufltkYJuVGAD9TIPtX3InJPBs9vwJ5dISIpzOmWeBB4mB0yLpDeKLAZKjwZSnw
+        PGdsCLmlGcrs09EaKKJ6kUeARVtsrBzKGeeceU+TP+9v9uSyFi8uanTmitZwfjEI3Ms9XNORyLsanLDP
+        i/dh74EWX7z78Iajw3htGTwFPATgSIDdtiJymUaFZJ+qm+2+DY0P8Gn0p/A4tBwhKdbiR0/bFOrfXKKW
+        +1dvb4/i7c3Vy5HHxvNqtGeoAEM2IPx+Yq7LVetorp/O7hCE5BRyWgdwCgrBER999g/h2z/XKJS8++rs
+        ugOPR7HX3tfgcORZhH5ROF2mBRF6BQEA1SLMhag8bxSJ135i/wPqfLezQaHm3VfXy06WHjNjz0Eeh8Pj
+        9XDSNpwayT5Zf5NXDvFBFFcEZutafPAH3K9MEx7X9VXw0+cP+Vn3I37afR/yAIPjpUJ9f6ifim/P7yv2
+        POLnL3/jJ10/sOyYeZ/HfTmGSFHt3mgpxwTt4+SdburvgomVjAEQhI/CumBRhYclHFs1FhVrwdGVZhxT
+        ac6B5WM4rXYmd7/6TYEVq5d3XrRm/7Ix2Gfetze26n2WV42DLhVeD10CGorikqK4XNEZnpvfy6CNeaNn
+        LopHCOBtGPqsbxMkDBu991FfcQirvSFLcS5HVBj1jcrBa1Ptx7w4DwqxR+xdrXiKfIZDj9AZKHSiPV0z
+        IEkGrhSWaKazNFrthh/yGoFQDIRlQIQRfYZAhBGJ1X/9wwDJqZ/Dq3ABGNgrZOC3wmNftJQcRRsBx5bH
+        SLpsk03ep+Dyv5FXrmHCSljSB1ZY+KYIJR4Ax1f/cWRuq5/FbgAP3i8iFoC29EDUxOg8gq7xxSCyk6uX
+        Lc4YKaEVuePIPsHUYqFU5cU6bIyAZcEosMFKhAiwGJkpNVMVuNcrv8GGXXcr9gIowiu8FB2SDWgLjtYt
+        qCHbaAlbJWvPnrdVl2jM53pkPF2frAI14z0wVQQ4HLkQBfYmXOQ58eQH3PGoktsfHuG2h4e446fjnHV2
+        xu+DQogn0ia6o/Rc/wWiAq3qiIuidfSQsklJmjQ1UZ3I/MthZPypPnnKNFXdtqhccMPMjYSVfc3+BlyE
+        T8xdz1JJXwEJmGepEq87KMGwEHMcUcHfpXivwhF673ucbhDXTGKbWOUHlvXqo/5Zr06fnFUj+sjRgP5u
+        N4Jc4/XIJUdv/CKpUqfIRRSONQEXDR8yqCVEsfiJPoeIORwAEYeB8FJIJkIqjtLHuFA04Zj1wOFiE6XE
+        Vmu1Zv+jSY1m/Ai5BfCy3FG0bPsoWpQ1iqzSTMi7dPQUhyTVey5psBxhF70ngIM9H5AABdAdBRSF9IgD
+        RtxCf8Fd7QTgS7cQfxmi8kp+1Mx6SfBw+rhuCE2/qUbTWwFekmH8u1gnjyT/CgtaWTB67OJQtSqHRHiF
+        gtqAapfiQI9ABESvrxeeAywDLBtn9XlAnuC69BjAelyXNuL7PBy188OGNnvlG32eXjORbAJ1aNqZt4FT
+        DMn30HjyKBhHy1PUle3TNSPso7TurkjCPXkHvIRCOQzIwi1jP3J4GlejFpzhF3CyleCuFYr82mDvV6Ea
+        T+w2q2W4ZKrrehebUMqJD2hhkO6fg93zzcguUYnci03JJ3faGPft5sFLErTrVySpsDPG6zcIoS+uSt4w
+        Zhn+62KbTLwA029BlE6LR4pJou+OqR96lpvS8nQl8txl/K5gZXIrMCa/3GkUWvcZORWbaDjK1D76RjZi
+        qVeGxYal8SNSbKN1Ut0zx8pWxps5uW4w/cQ3y0RfXvIp+e38kNz3GQGs/BawGv0Pq9q+ng322kgAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
 </root>
