Invoice print in progress

--- a/Bride Zilla/Rachunek.resx
+++ b/Bride Zilla/Rachunek.resx
@@ -213,4 +213,26 @@
         9O8A/+8F9i+sEigExiw0cwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="btnInvoice.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAOvSURBVEhLxdZbbBRVHMfxfwjXQqMUQyMBE4Gt5bKdvcy2
+        3W4FuShQ6Lbb1hRrokCMcokPKuCDibdKKw+ERGybVmitTcFwM6gv8GAw8cFEH3zzDRN98okQiGA0jt//
+        9Jzu7GYIUtq6yScz58yZ89uZOXPOiOd5/4vQyukQWjkdRHqzd1ODUYxgcBKcxgCWguCTTSIDKAx9BHfg
+        TYHv0SLyceNY8Cj7fYT2+MFtgYZT4ROJV7u+xa9uEjnXJtLPn+jJtoc0nkyDUr02LuknYrJ+aVTKX9kg
+        cuFZkdOt7TKU8+TTBzCM/iaPiwgPTiaTknCTkoolpH55lVQ0ZmTeB9tk5rHtMufDhonpRtc2kaHmSvks
+        96OcaAwP9rnJWrZN9Suc7enK2EY3nkyknERqQqoS6drV8Vh0XbXMPr5DCL9adOV+8EqcgGcR6nEHHogb
+        T3g8vl9imZTIqeaof9uLgj8Khhp9eBlvGm9hLxqwxWy1rPW2zSHsw28Y76uuwsmWdHLbh3PB19MPHgw2
+        NCqRfwx5cWjn+gs7rs7C70evumZNvEPHDAPu5r2C30ZxZ1vxD4LtVA7FbRfhCu6MBx/xg28VB49AO7mM
+        4k5UNWzQNczAsUBdHcLO22WCn79X8FfmBDUXc8z+F9Djf0HrD+CUqVNfQ9vNhh63ffznYNtBCa7jbyzB
+        T7AhZXBxK1D3MxbjJkdus30oE3GkdlVsN6+Vx7bDDC4bfBvdYcEVpqwy+C5QVkeg7fTPafkHpJmE/Nco
+        s8JZG8nWyZrNNfO52hcoR3RSYSa0g2sPFgSDg7e6DS+a/c+hx29gJ/bgUeit9wi86CaSklnp7Fz3WLS9
+        fO9GnfMXycnmFDPYrNJ3to4tPn3Zhwmci7EVkJNt8JewwUEx6HHVj1L8Pl6XSLpMOOLUp2Th4adFzre9
+        5k8WSufskZZfCaowq14eJw+ZTv6EPs+wV+RJ6POzf0DpFT9T/3iVLNu1XuQSi8toywE6tQvDQXT65d7s
+        DZSiIDhsAtFBVRyuIuiAjgO/ro6BFMllRM60aofXoEFqE94NlN9HQfBxFE8Ow3gDnUY3dFp8Dq1mexhd
+        3OqB9KrY6pIuBpDe2nyQfsX0BMqXUBC8DEcRDL4vmeVV75W9vpl1vOW6CVGz8E2grN9bBcGWA10AnrpP
+        Dazj0fL9jOYzrfYK/8B8aJgNdhAaPGG8SlJ2iBGt32292W9hw6yXkA+d1OCD48FqN67iLFxTVyjsY3s6
+        hFZOh9DKqefJv7A3kr8CyAmmAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
